--- a/mean and se table10-12.Rmd
+++ b/mean and se table10-12.Rmd
@@ -55,7 +55,7 @@ The paste function automatically adds a space between each element - add sep="" 
 ```{r}
 meanse <- function(x, ...){
   mean1 <-   signif(round(mean(x, na.rm=T),2), 3)   #calculate mean and round
-  se1 <- signif(round(sd(x, na.rm=T)/sqrt(sum(!is.na(x))), 2),2) # std error - round adding zeros
+  se1 <- signif(round(sd(x, na.rm=T)/sqrt(sum(!is.na(x))), 2),2) # std error - round - note may not have trailing zeros
   out <- paste(mean1, "$\\pm$", se1)  # paste together mean plus/minus and standard error
     if (str_detect(out,"NA")) {out="NA"}   # if missing do not add plusminus
   return(out)
